fdo#79078 restore transparency in SVG export

Change-Id: I5bdf6c3b313a73126cb692e5101836f424a2fc08